# OCCTWrapper

cswrapper_7.6.0_sources/csharp/: CMakeLists.txt  Readme.txt  mkdelivery.bat
cswrapper_7.6.0_sources/csharp/CSharpTest/: CMakeLists.txt  Test.cs
cswrapper_7.6.0_sources/csharp/ImportExport/: AboutDialog.cs  AboutDialog.resx  CMakeLists.txt  Form1.cs  Form1.resx  Form2.cs  Form2.resx  MaterialDialog.cs  TransparencyDialog.cs  app.config
cswrapper_7.6.0_sources/csharp/ImportExportWPF/: App.xaml  App.xaml.cs  CMakeLists.txt  ExportTool.cs  ImportTool.cs  MainWindow.xaml  MainWindow.xaml.cs  MessagePrinter.cs  ProgressIndicator.cs
cswrapper_7.6.0_sources/csharp/ImportExportWPF/Properties/: Resources.Designer.cs  Resources.resx  Settings.Designer.cs
cswrapper_7.6.0_sources/csharp/ImportExportWPF/Utils/: Converters.cs  PropertyChangedNotifier.cs  ShapeTreeNode.cs
cswrapper_7.6.0_sources/csharp/OCCCSharp/: CMakeLists.txt
cswrapper_7.6.0_sources/csharp/OCCWinForms/: CMakeLists.txt  OCCWinForms_ViewControl.Designer.cs  OCCWinForms_ViewControl.cs  OCCWinForms_Viewer.Designer.cs  OCCWinForms_Viewer.cs
cswrapper_7.6.0_sources/csharp/OCCWinForms/Properties/: Resources.Designer.cs  Settings.Designer.cs
cswrapper_7.6.0_sources/csharp/OCCWpf/: CMakeLists.txt  OCCWpf_ImageView.cs  OCCWpf_Utils.cs  OCCWpf_ViewContoller.cs  OCCWpf_Viewer.cs
cswrapper_7.6.0_sources/csharp/OCCWpf/Properties/: Resources.Designer.cs
cswrapper_7.6.0_sources/csharp/OCCwrapCSharp/: CMakeLists.txt  ChangeLog.txt  OCC2CSharp.txt  cref.i  occcol.i  occcsharp.i  occtypes.i
cswrapper_7.6.0_sources/csharp/TKJT/: CMakeLists.txt  JtTestRunner.cs  ObjWriter.cs  Program.cs
cswrapper_7.6.0_sources/csharp/TKJT/Properties/: Resources.Designer.cs  Settings.Designer.cs
cswrapper_7.6.0_sources/csharp/TKJT/TestUnity/: Readme.txt  TestJt.cs
cswrapper_7.6.0_sources/csharp/cmake/: AssemblyInfo.cs.in  FindOpenCASCADE.cmake  custom.bat.in  env.bat.in  listbad.bat.in  occt_defs_flags.cmake  occt_macros.cmake  run.bat.in
cswrapper_7.6.0_sources/swig/: HowToWrap.txt  TKBO.i  TKBRep.i  TKBinL.i  TKCDF.i  TKG3d.i  TKGeomBase.i  TKHLR.i  TKIGES.i  TKJT.i  TKLCAF.i  TKMath.i  TKMesh.i  TKOCCLicense.i  TKOpenGL.i  TKRWMesh.i  TKSTEP.i  TKSTEPAttr.i  TKSTEPBase.i  TKSTL.i  TKService.i  TKShHealing.i  TKTopAlgo.i  TKV3d.i  TKVRML.i  TKXDEIGES.i  TKXDEJT.i  TKXDESTEP.i  TKXSBase.i  TKernel.i  occbase.i
